--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "eslint": "^8.46.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^9.0.0",
+        "eslint-import-resolver-alias": "^1.1.2",
         "eslint-plugin-html": "^7.1.0",
         "eslint-plugin-import": "^2.28.0",
         "eslint-plugin-prettier": "^5.0.0",
